# pico_debug_with_swd

./: .gitignore  CMakeLists.txt  README  README.md  board.cfg
app/: test_led.c
utils/: 99-openocd.rules  picoprobe.uf2
